--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.2.96",
     "pinia": "^2.0.32",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.2.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
