--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mdi/font": "^7.2.96",
     "pinia": "^2.0.32",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
