--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "flipbook-vue": "^1.0.0-beta.4",
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.2.0",
     "sass": "^1.64.1",
