--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@types/node": "^20.11.16",
+    "@vueuse/core": "^10.9.0",
     "flipbook-vue": "^1.0.0-beta.4",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
